2013-04-17  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave-mod.el (octave-mode-map): Fix key binding to
	octave-hide-process-buffer.

2013-04-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc/vc-hg.el (vc-hg-annotate-re): Disallow ": " in file names
	(bug#14216).

2013-04-17  Jean-Philippe Gravel  <jpgravel@gmail.com>

	* progmodes/gdb-mi.el (gdbmi-bnf-incomplete-record-result):
	Fix adjustment of offset when receiving incomplete responses from GDB
	(bug#14129).

2013-04-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/python.el (python-mode-skeleton-abbrev-table): Rename from
	python-mode-abbrev-table.
	(python-skeleton-define): Adjust accordingly.
	(python-mode-abbrev-table): New table that inherits from it so that
	python-skeleton-autoinsert does not affect non-skeleton abbrevs.

	* abbrev.el (abbrev--symbol): New function, extracted from abbrev-symbol.
	(abbrev-symbol): Use it.
	(abbrev--before-point): Use it since we already handle inheritance.

2013-04-16  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave-mod.el (octave-mode-map): Remove redundant key
	binding to info-lookup-symbol.

2013-04-16  Juanma Barranquero  <lekktu@gmail.com>

	* minibuffer.el (completion--twq-all):
	* term/ns-win.el (ns-initialize-window-system):
	* term/w32-win.el (w32-initialize-window-system): Silence byte-compiler.

2013-04-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/nadvice.el (add-function): Default simple vars to their
	global bindings.

	* doc-view.el (doc-view-start-process): Handle url-handler directories.

2013-04-15  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-beginning-of-defun)
	(ruby-end-of-defun, ruby-move-to-block): Bind `case-fold-search'
	to nil.
	(ruby-end-of-defun): Remove the unused arg, change the docstring
	to reflect that this function is only used as the value of
	`end-of-defun-function'.
	(ruby-beginning-of-defun): Remove "top-level" from the docstring,